manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-app
  namespace: budget-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: budget-app
  template:
    metadata:
      labels:
        app: budget-app
    spec:
      containers:
      - name: budget-app
        image: shubhkarma666/budget-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: budget-app
  namespace: budget-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: budget-app
